kyverno/C0009-container-image-sigstore/policy-C0009.yaml
# Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: portefaix-C0001
  annotations:
    policies.kyverno.io/title: Docker images used by control plane pods are correctly signed
    policies.kyverno.io/category: Security
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Container
    policies.kyverno.io/description: >-
      The ':latest' tag is mutable and can lead to unexpected errors if the
      image changes. A best practice is to use an immutable tag that maps to
      a specific version of an application pod.
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: verify-k8s-images
      match:
        any:
          - resources:
              kinds:
                - Pod
      verifyImages:
      # verify kube-* and coredns/* images
      - imageReferences:
        - registry.k8s.io/kube-*
        - registry.k8s.io/coredns/*
        verifyDigest: false
        required: false
        mutateDigest: false
        attestors:
        - entries:
          - keyless:
              issuer: https://accounts.google.com
              subject: krel-trust@k8s-releng-prod.iam.gserviceaccount.com
              rekor:
                url: https://rekor.sigstore.dev
      # verify etcd:* images
      - imageReferences:
        - registry.k8s.io/etcd:*
        verifyDigest: false
        required: false
        mutateDigest: false
        attestors:
        - entries:
          - keyless:
              issuer: https://accounts.google.com
              subject: k8s-infra-gcr-promoter@k8s-artifacts-prod.iam.gserviceaccount.com
              rekor:
                url: https://rekor.sigstore.dev
